--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               I'm passionate about creating user-friendly and impactful software. 
               For my final year project, I built a personal budgeting application using MERN stack to further my understanding of full-stack development.
               I'm constantly seeking opportunities to learn new technologies and contribute to real-world projects.
-              To enhance my front-end development skills, I'm currently developing a To-Do application leveraging Angular's framework for building the user interface and utilizing HTTP services to consume data from a Django backend. Additionally, 
+              To enhance my software development skills, I'm currently developing a To-Do application leveraging Angular's framework for building the user interface and utilizing HTTP services to consume data from a Django backend. Additionally, 
               I'm incorporating Angular's reactive forms for a more responsive user interaction.
             </p>
           </div>
